# Wells-HackAThon_Aug28

./: .gitignore  LICENSE  README.md
NL-2-sql-App/: .coverage  .env  .gitignore  BUG_FIXES_SUMMARY.md  GEMINI_MIGRATION_GUIDE.md  INITIALIZATION_CHECKLIST.md  README.md  app.py  app_backup.py  cleanup_vectorstore.py  env_template.txt  organize_files.sh  pyproject.toml  repopulate_vector_db.py  requirements-minimal.txt  requirements.txt  run_tests.sh  run_with_uv.sh  security_guard.db  setup.ps1  setup.sh  setup_env.py  setup_openai.sh  streamlit_app.py  system_initializer.py  test_1024_tokens.py  test_chromadb.py  test_customer_query.py  test_fix.py  test_gemini_integration.py  test_integration_runner.py  test_llm_loading.py  test_openai_integration.py  test_query_history.py  test_security_guard.py  test_security_guard_behavior.py  test_system.py  toggle_pii_scanning.py  token_analysis.py
NL-2-sql-App/backend/: agent_debugger.py  chromadb_singleton.py  db_init.py  db_manager.py  embedder.py  executor.py  gemini_embedder.py  gemini_health_checker.py  gemini_sql_generator.py  health_checker.py  integration_test_runner.py  langgraph_agents.py  langgraph_state.py  llm_config.py  llm_embedder.py  llm_prompt_builder.py  llm_provider.py  llm_sql_generator.py  logger_config.py  ollama_init.py  pdf_exporter.py  pipeline.py  planner.py  query_history.py  retriever.py  schema_initializer.py  security_guard.py  sql_generator.py  summarizer.py  system_initializer.py  timing_tracker.py  ui_debugger.py  validator.py
NL-2-sql-App/chroma_db/: chroma.sqlite3
(+63 files in other folders)
